# Keenetic-RDCT

./: .editorconfig  .gitignore  ARCHITECTURE_PRINCIPLES.md  ASSUMPTIONS.md  BACKLOG.md  CHANGELOG.md  CHECKLIST_HW.md  CONTRIBUTING.md  DECISIONS.md  DOD.md  LICENSE  Makefile  PROGRESS.md  README.md  README.ru.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  WBS.md  install.sh  pyproject.toml  rdct.sh  version.json
.github/: CODEOWNERS  pull_request_template.md
cli/: keenetic-debug
collectors/: registry.json
docs/: API_REFERENCE.md  API_REFERENCE.ru.md  APP_MANAGER.md  APP_MANAGER.ru.md  ARCHITECTURE.md  ARCHITECTURE.ru.md  COLLECTORS_CATALOG.md  COLLECTORS_CATALOG.ru.md  CONFIG_REFERENCE.md  CONFIG_REFERENCE.ru.md  DEPENDENCIES.md  DEPENDENCIES.ru.md  FORMAT_SPEC.md  FORMAT_SPEC.ru.md  INSTALL.md  INSTALL.ru.md  PRIVACY.md  PRIVACY.ru.md  QUICKSTART.md  QUICKSTART.ru.md  SECURITY.md  SECURITY.ru.md  TROUBLESHOOTING.md  TROUBLESHOOTING.ru.md  compatibility.md
examples/: config.default.json  config.example.json  config.full.json  config.minimal.json  rdct.config.json
i18n/: en.json  ru.json
migrations/: README.md  v0_to_v1.sh
modules/: README.md  adapter_router.sh  app_manager.sh  checks_engine.sh  collector_runner.sh  collectors_manager.sh  config_blocks.sh  configurator.sh  core.sh  delta_manager.sh  device_info.sh  file_ops.sh  governor.sh  i18n.sh  inventory_builder.sh  lock_manager.sh  logger.sh  packager.sh  policy_loader.sh  preflight.sh  process_runner.sh  redaction_engine.sh  resume_manager.sh  storage_guard.sh  update_manager.sh  webui_server.sh
(+258 files in other folders)
