[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rdct"
version = "0.1.0"
description = "RDCT — Router Diagnostic & Control Tool (USB-only)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="RDCT"}
]
dependencies = []

[project.scripts]
rdct = "rdct.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rdct = ["policy/rules.json", "web/static/**"]
